# online_mart_api

./: LICENSE  docker-compose.yml  kafka_topics.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
app/: database.py  main.py  test_db_connection.py
app/users/: crud.py  routes.py  schemas.py
protobuf/: order.proto  user.proto
tests/: test_crud.py  test_users.py
